# ToyRenderer

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
Renderer/: CMakeLists.txt  CmakeLists.txt  GLApp.cpp  GLApp.h
Renderer/Assets/CubeTest/: cube.mtl
Renderer/Assets/ObjTest/: objTest.mtl
Renderer/Assets/Torus/: torus.mtl
Renderer/GL/: ConvertToMeshes.cpp  ConvertToMeshes.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PBRMaterial.cpp  PBRMaterial.h  RawTexture.cpp  RawTexture.h  Renderer.cpp  Renderer.h  SubMesh.cpp  SubMesh.h  VertexBuffer.cpp  VertexBuffer.h
Renderer/GL/OGL4/: Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Renderer/GL/Shaders/: DeferredPass.glsl  DepthShader.glsl  GBuffer.glsl  IndirectPass.glsl  PBRShader.glsl  Shader.glsl  SolidColor.glsl
Renderer/Utils/: Layout.cpp  Layout.h  OBJData.cpp  OBJData.h  OBJMaterial.cpp  OBJMaterial.h  SubOBJData.cpp  SubOBJData.h  Utils.cpp  Utils.h  loadMTLFile.cpp  loadMTLFile.h  loadOBJFile.cpp  loadOBJFile.h
Renderer/glad/include/glad/: glad.h
Renderer/glad/src/: glad.c
Renderer/imGUI/: ImGuiFileDialog.cpp
Renderer/math/: CameraMouseController.cpp  CameraMouseController.h
